--- a/index.html
+++ b/index.html
@@ -4,22 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculum</title>
+
   <link rel="stylesheet" href="./Assets/stylescss">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 </head>
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Javiera Rojas Peña</a>
+      <a class="navbar-brand" href="#">
+        <h1>Javiera Rojas Peña</h1>
+      </a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Eduación</a>
-          <a class="nav-link" href="#">Experiancia laboral</a>
-          <a class="nav-link" href="#">Portafolio</a>
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link active" aria-current="page" href="#">
+            <h2>Formación</h2>
+          </a>
+          <a class="nav-link" href="#">
+            <h2>Experiencia laboral</h2>
+          </a>
+          <a class="nav-link" href="#">
+            <h2>Portafolio</h2>
+          </a>
+          <a class="nav-link disabled" aria-disabled="true">
+            <h2>Contacto</h2></a>
         </div>
       </div>
     </div>
@@ -27,6 +41,7 @@
   </nav>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/c6079967e2.js" crossorigin="anonymous"></script>
     
   
   
