--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Portafolio</h2>
           </a>
           <a class="nav-link disabled" aria-disabled="true">
-            <a href="https://www.instagram.com/" class="btn btn-primary"><h2>Contacto</h2></a>
+            <h2>Contacto</h2>
             
         </div>
       </div>
