--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="card-body">
           <h5 class="card-title">Proyecto HTML</h5>
           <p class="card-text"><h3>Primer proyecto del módulo 1</h3></p>
-          <a href="#" class="btn btn-primary">Ir al Proyecto</a>
+          <a href="https://github.com/jrojaspena/htmldesafio.git.io" class="btn btn-primary">Ir al Proyecto</a>
         </div>
       </div></div>
       <div class="col-sm"><div class="card" style="width: 18rem;">
@@ -56,7 +56,7 @@
         <div class="card-body">
           <h5 class="card-title">Proyecto CSS</h5>
           <p class="card-text"><h3>Segundo proyecto del módulo 1</h3></p>
-          <a href="#" class="btn btn-primary">Ir al Proyecto</a>
+          <a href="https://github.com/jrojaspena/desafiocss.git.io" class="btn btn-primary">Ir al Proyecto</a>
         </div>
       </div></div>
       <div class="col-sm"><div class="card" style="width: 18rem;">
@@ -64,7 +64,7 @@
         <div class="card-body">
           <h5 class="card-title">Proyecto Iguana page</h5>
           <p class="card-text"><h3>Tercer proyecto del módulo 1</h3></p>
-          <a href="#" class="btn btn-primary">Ir al Proyecto</a>
+          <a href="https://github.com/jrojaspena/desafioflex.git.io" class="btn btn-primary">Ir al Proyecto</a>
         </div>
       </div></div>
     </div>
@@ -74,9 +74,9 @@
       <div class="col-sm"><div class="card" style="width: 18rem;">
         <img src="./Assets/Img3.png" class="card-img-top" alt="...">sx
         <div class="card-body">
-          <h5 class="card-title">Proyecto Flexbox</h5>
+          <h5 class="card-title">Proyecto boopstrap</h5>
           <p class="card-text"><h3>Cuarto proyecto del módulo 1</h3></p>
-          <a href="#" class="btn btn-primary">Ir al Proyecto</a>
+          <a href="https://github.com/jrojaspena/desafioboopstrap.git.io" class="btn btn-primary">Ir al Proyecto</a>
         </div>
       </div></div>
       <div class="col-sm"><div class="card" style="width: 18rem;">
@@ -84,7 +84,7 @@
         <div class="card-body">
           <h5 class="card-title">Proyecto Github</h5>
           <p class="card-text"><h3>Quinto proyecto del módulo 1</h3></p>
-          <a href="#" class="btn btn-primary">Ir al Proyecto</a>
+          <a href="https://github.com/jrojaspena/fdsw-githubjaviera" class="btn btn-primary">Ir al Proyecto</a>
         </div>
       </div></div>
     </div>
